--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,17 @@ a {
     margin-bottom: 50px;
 }
 
+.main-pportfolio {
+    text-align: center;
+    overflow: hidden;
+    flex: 1;
+    width: 75%;
+    margin: auto;
+    margin-top: 35px;
+    border-radius: 10px;
+    margin-bottom: 50px;
+}
+
 /* Text Styles */
 .text {
     margin: auto;
@@ -89,6 +100,8 @@ a {
 .header {
     margin: 5px auto;
     text-align: left;
+		text-align: center;
+		margin-bottom: 25px;
 }
 
 .text-link {
@@ -236,9 +249,60 @@ figure img {
 }
 
 
+/* Programming Portfolio Styles */
+.p-title {
+	text-align: center;
+	padding-top: 50px;
+	margin-bottom: 0px;
+	padding-bottom: 0px;
+}
 
+.pportfolio {
+	padding-top: 0px;
+	background: #d8d8d8;
+}
 
+.p-hr {
+	border: solid black 1px;
+	background-color: black;
+}
 
+.p-link {
+	color: #5186ef;
+	font-weight: bold;
+}
+
+.p-nav {
+	display: inline;
+	margin: 0px;
+}
+
+.p-text {
+	-webkit-margin-before: 10px;
+  -webkit-margin-after: 10px;
+}
+
+.p-description {
+	font-weight: normal;
+}
+
+.p-picture {
+	max-width:100%;
+	max-height:1000px;
+}
+
+.p-bar {
+	font-weight: bolder;
+	font-size: 18px;
+}
+
+.p-lastpara {
+	margin-bottom: 25px;
+}
+
+.p-notfirst {
+	margin-top: 50px;
+}
 
 
 
