--- a/css/styles.css
+++ b/css/styles.css
@@ -278,17 +278,23 @@ figure img {
 }
 
 .p-text {
-	-webkit-margin-before: 10px;
+  -webkit-margin-before: 10px;
   -webkit-margin-after: 10px;
 }
 
 .p-description {
-	font-weight: normal;
+    font-weight: bold;
+    line-height: 1.3;
+}
+
+.picture-container {
+    text-align: center;
 }
 
 .p-picture {
 	max-width:100%;
-	max-height:1000px;
+    max-height:1000px;
+    margin: auto;
 }
 
 .p-bar {
@@ -307,7 +313,6 @@ figure img {
 
 
  .team-treehouse {
-
     h1, h2 {
       text-align: center;
     }
