start work on making under construction projects

--- a/css/styles.css
+++ b/css/styles.css
@@ -250,6 +250,11 @@ figure img {
 
 
 /* Programming Portfolio Styles */
+.uc {
+    background-image: url("https://www.xmple.com/wallpaper/white-lines-yellow-streaks-stripes-3840x2160-c2-ffff00-fff0f5-l2-76-76-a-165-f-1.svg");
+    
+}
+
 .p-title {
 	text-align: center;
 	padding-top: 50px;
